footer with background had issue witht he white margin around. Fixed with minus margin and extra padding on footer element

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     font-family: 'Karla', sans-serif;
-    color: #00dbd0;
+    color: #001a17;
     line-height: 1.5;
 }
 
@@ -36,7 +36,7 @@ a {
 }
 
 .accent-color {
-    color: #002926;
+    color: #005752;
 }
 
 .hero-title {
@@ -66,6 +66,7 @@ a {
 ===================== */
 .hero {
     background-image: url(images/plant-hero.jpg);
+    padding: 4em 0;
 }
 
 .hero > * {
@@ -79,6 +80,7 @@ a {
 .info {
     padding: 1em 0;
     text-align: center;
+    margin-bottom: 1em;
 }
 
 .col {
@@ -96,7 +98,9 @@ a {
 .footer-main {
     grid-column: 2 / -2;
     order:1;
-    background: #b8b8b8;
+    background: #f5f5f5;
+    padding: 1em;
+    margin: 0 -1em;
 }
 
 .footer-social {
@@ -106,6 +110,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-bottom: 2em;
     /* background: red; */
 }
 
